--- a/test/multicrab_Signal.cfg
+++ b/test/multicrab_Signal.cfg
@@ -3,11 +3,36 @@ cfg = crab_TEMPLATESignal.cfg
 
 [COMMON]
 
-CMSSW.number_of_jobs        = 950
+#CMSSW.number_of_jobs        = 950
+CMSSW.number_of_jobs        = 400
 CMSSW.total_number_of_events = 100000
 CMSSW.dbs_url = phys03
 CMSSW.pset = myPATproducer_openHLT.py
-USER.publish_data_name = openHLT_Prod_v720pre8_v2
+USER.publish_data_name = openHLT_Prod_v721patch2
+
+#[RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT]
+#CMSSW.datasetpath  = /RPVSt100tojj_13TeV_pythia8_GENSIM/algomez-RPVSt100tojj_13TeV_pythia8_AODSIM_v706_PU40bx25-5d30d9ccaa671717840644afc88e543e/USER
+#CMSSW.pycfg_params = RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT
+#CMSSW.output_file = RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT_Prod.root
+#USER.user_remote_dir = RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT
+#
+#[RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_HLT2PAT]
+#CMSSW.datasetpath  = /RSGravitonToWW_kMpl01_M_1000_Tune4C_13TeV_pythia8/algomez-RSGravitonToWW_kMpl01_M_1000_Tune4C_13TeV_pythia8_AODSIM_v706_PU40bx25-5d30d9ccaa671717840644afc88e543e/USER
+#CMSSW.pycfg_params = RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_HLT2PAT
+#CMSSW.output_file = RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_HLT2PAT_Prod.root
+#USER.user_remote_dir = RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_HLT2PAT
+#
+#[SquarkTojNeu_M400_Neutojjj_13TeV_PU40bx25_HLT2PAT]
+#CMSSW.datasetpath  = /sstrange_M400_8_sqtojjjj_M400_GENSIM_v706/mmorris-sstrange_M400_8_sqtojjjj_M400_AODSIM_v706_PU40bx25-5d30d9ccaa671717840644afc88e543e/USER
+#CMSSW.pycfg_params = SquarkTojNeu_M400_Neutojjj_13TeV_PU40bx25_HLT2PAT
+#CMSSW.output_file = SquarkTojNeu_M400_Neutojjj_13TeV_PU40bx25_HLT2PAT_Prod.root
+#USER.user_remote_dir = SquarkTojNeu_M400_Neutojjj_13TeV_PU40bx25_HLT2PAT
+
+[SqTojNeu_M400_Neutojjj_M100_13TeV_PU40bx25_HLT2PAT]
+CMSSW.datasetpath  = /sq400TOjn0_nO100TOjjj_GENSIM_v706/mmorris-sq400TOjn0_nO100TOjjj_AODSIM_v706_PU40bx25-5d30d9ccaa671717840644afc88e543e/USER
+CMSSW.pycfg_params = SqTojNeu_M400_Neutojjj_M100_13TeV_PU40bx25_HLT2PAT
+CMSSW.output_file = SqTojNeu_M400_Neutojjj_M100_13TeV_PU40bx25_HLT2PAT_Prod.root
+USER.user_remote_dir = SqTojNeu_M400_Neutojjj_M100_13TeV_PU40bx25_HLT2PAT
 
 #[RPVSt100tojj_13TeV_pythia8_PU40bx50_HLT2PAT]
 #CMSSW.datasetpath  = /RPVSt100tojj_13TeV_pythia8_GENSIM/algomez-RPVSt100tojj_13TeV_pythia8_AODSIM_625_PU40bx50_v2-ca86998ca30d3e49107c4139b65d2908/USER
@@ -16,15 +41,8 @@ USER.publish_data_name = openHLT_Prod_v720pre8_v2
 #USER.user_remote_dir = RPVSt100tojj_13TeV_pythia8_PU40bx50_HLT2PAT
 #USER.ui_working_dir= RPVSt100tojj_13TeV_pythia8_PU40bx50_HLT2PAT
 #
-[RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT]
-CMSSW.datasetpath  = /RPVSt100tojj_13TeV_pythia8_GENSIM/algomez-RPVSt100tojj_13TeV_pythia8_AODSIM_625_PU40bx25_v2-ca86998ca30d3e49107c4139b65d2908/USER
-CMSSW.pycfg_params = RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT
-CMSSW.output_file = RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT_Prod.root
-USER.user_remote_dir = RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT
-USER.ui_working_dir= RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT
-
 #[RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT]
-#CMSSW.datasetpath  = /RPVSt100tojj_13TeV_pythia8_GENSIM/algomez-RPVSt100tojj_13TeV_pythia8_AODSIM_625_PU20bx25_v2-ca86998ca30d3e49107c4139b65d2908/USER
+#CMSSW.datasetpath  = /RPVSt100tojj_13TeV_pythia8_GENSIM/algomez-RPVSt100tojj_13TeV_pythia8_AODSIM_v706_PU20bx25-5d30d9ccaa671717840644afc88e543e/USER
 #CMSSW.pycfg_params = RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT
 #CMSSW.output_file = RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT_Prod.root
 #USER.user_remote_dir = RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT
@@ -72,10 +90,3 @@ USER.ui_working_dir= RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT
 ##USER.user_remote_dir = RSGravitonToWW_kMpl01_M_1000_Tune4C_13TeV_PU20bx25_HLT2PAT
 ##USER.ui_working_dir= RSGravitonToWW_kMpl01_M_1000_Tune4C_13TeV_PU20bx25_HLT2PAT
 #
-[RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_HLT2PAT]
-CMSSW.datasetpath  = /RSGravitonToWW_kMpl01_M_1000_Tune4C_13TeV_pythia8/algomez-RSGravitonToWW_kMpl01_M_1000_Tune4C_13TeV_pythia8_AODSIM_v706_PU40bx25-5d30d9ccaa671717840644afc88e543e/USER
-CMSSW.pycfg_params = RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_HLT2PAT
-CMSSW.output_file = RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_HLT2PAT_Prod.root
-USER.user_remote_dir = RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_HLT2PAT
-USER.ui_working_dir= RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_HLT2PAT
-
