--- a/test/multicrab_SignalFilt.cfg
+++ b/test/multicrab_SignalFilt.cfg
@@ -7,14 +7,23 @@ CMSSW.number_of_jobs        = 100
 CMSSW.total_number_of_events = 100000
 CMSSW.pset =  myfilter_openHLT.py
 CMSSW.dbs_url = phys03
-USER.publish_data_name = openHLT_Filt_v720pre8_v1
+USER.publish_data_name = openHLT_Filt_v721patch2
 
-[RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt]
-CMSSW.datasetpath  = /RPVSt100tojj_13TeV_pythia8_GENSIM/algomez-openHLT_Prod_v720pre8_v2_RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT-e997e4213a2d44dae7b8f751187de46d/USER
-CMSSW.pycfg_params = RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt
-#CMSSW.output_file = RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt_Filt.root
-USER.user_remote_dir = RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt
-USER.ui_working_dir= RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt
+#[RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt]
+#CMSSW.datasetpath = /RPVSt100tojj_13TeV_pythia8_GENSIM/algomez-openHLT_Prod_v721patch2_RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT-80d41a9bad737416b31b8d2d4e738811/USER 
+#USER.ui_working_dir= RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt
+#
+#[RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_Filt]
+#CMSSW.datasetpath = /RSGravitonToWW_kMpl01_M_1000_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_HLT2PAT-80d41a9bad737416b31b8d2d4e738811/USER
+#USER.user_remote_dir = RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_Filt
+#
+#[SquarkTojNeu_M400_Neutojjj_13TeV_PU40bx25_Filt]
+#CMSSW.datasetpath = /sstrange_M400_8_sqtojjjj_M400_GENSIM_v706/algomez-openHLT_Prod_v721patch2_SquarkTojNeu_M400_Neutojjj_13TeV_PU40bx25_HLT2PAT-80d41a9bad737416b31b8d2d4e738811/USER
+#USER.user_remote_dir = SquarkTojNeu_M400_Neutojjj_13TeV_PU40bx25_Filt
+
+[SqTojNeu_M400_Neutojjj_M100_13TeV_PU40bx25_Filt]
+CMSSW.datasetpath = /sq400TOjn0_nO100TOjjj_GENSIM_v706/algomez-openHLT_Prod_v721patch2_SqTojNeu_M400_Neutojjj_M100_13TeV_PU40bx25_HLT2PAT-80d41a9bad737416b31b8d2d4e738811/USER
+USER.user_remote_dir = SqTojNeu_M400_Neutojjj_M100_13TeV_PU40bx25_Filt
 
 #[RPVSt100tojj_13TeV_pythia8_PU40bx50]
 #CMSSW.datasetpath  = /RPVSt100tojj_13TeV_pythia8_GENSIM/algomez-RPVSt100tojj_13TeV_pythia8_AODSIM_625_PU40bx50_v3-ca86998ca30d3e49107c4139b65d2908/USER
@@ -65,11 +74,4 @@ USER.ui_working_dir= RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt
 #USER.user_remote_dir = SMS-T1tttt_2J_mGl-1500_mLSP-100_Tune4C_13TeV_PU20bx25_Filt
 #USER.ui_working_dir= SMS-T1tttt_2J_mGl-1500_mLSP-100_Tune4C_13TeV_PU20bx25_Filt
 #
-#
-[RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_Filt]
-CMSSW.datasetpath  = /RSGravitonToWW_kMpl01_M_1000_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v2_RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_HLT2PAT-ff7b1ef4d80d5a8897f2f489ec57bfdc/USER
-CMSSW.pycfg_params = RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_Filt
-#CMSSW.output_file = RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_Filt.root
-USER.user_remote_dir = RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_Filt
-USER.ui_working_dir= RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_Filt
 #
