--- a/test/multicrab.cfg
+++ b/test/multicrab.cfg
@@ -6,7 +6,7 @@ cfg = crab_TEMPLATE.cfg
 CMSSW.number_of_jobs        = 400
 CMSSW.total_number_of_events = 20000
 CMSSW.pset =  myproducer_openHLT.py
-USER.publish_data_name = openHLT_Prod_v720pre8_v3
+USER.publish_data_name = openHLT_Prod_v721patch2
 
 
 ##### 13 TeV PU20bx25 QCD_antiEM ###
@@ -260,52 +260,31 @@ USER.publish_data_name = openHLT_Prod_v720pre8_v3
 
 [QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25]
 CMSSW.datasetpath  = /QCD_Pt-80to120_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
-CMSSW.pycfg_params = QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25
-CMSSW.output_file = QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25_Prod.root
 USER.user_remote_dir = QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25
-USER.ui_working_dir= QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25
 
 [QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25]
 CMSSW.datasetpath  = /QCD_Pt-120to170_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
-CMSSW.pycfg_params = QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25
-CMSSW.output_file = QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25_Prod.root
 USER.user_remote_dir = QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25
-USER.ui_working_dir= QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25
 
 [QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25]
 CMSSW.datasetpath  = /QCD_Pt-170to300_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
-CMSSW.pycfg_params = QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25
-CMSSW.output_file = QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25_Prod.root
 USER.user_remote_dir = QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25
-USER.ui_working_dir= QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25
 
 [QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25]
 CMSSW.datasetpath  = /QCD_Pt-300to470_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
-CMSSW.pycfg_params = QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25
-CMSSW.output_file = QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25_Prod.root
 USER.user_remote_dir = QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25
-USER.ui_working_dir= QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25
 
 [QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25]
 CMSSW.datasetpath  = /QCD_Pt-470to600_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
-CMSSW.pycfg_params = QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25
-CMSSW.output_file = QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25_Prod.root
 USER.user_remote_dir = QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25
-USER.ui_working_dir= QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25
 
 [QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25]
 CMSSW.datasetpath  = /QCD_Pt-600to800_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
-CMSSW.pycfg_params = QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25
-CMSSW.output_file = QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25_Prod.root
 USER.user_remote_dir = QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25
-USER.ui_working_dir= QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25
 
 [QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25]
 CMSSW.datasetpath  = /QCD_Pt-800to1000_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
-CMSSW.pycfg_params = QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25
-CMSSW.output_file = QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25_Prod.root
 USER.user_remote_dir = QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25
-USER.ui_working_dir= QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25
 
 #[QCD_Pt-1000to1400_Tune4C_13TeV_pythia8_PU40bx25]
 #CMSSW.datasetpath  = /QCD_Pt-1000to1400_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
@@ -361,12 +340,12 @@ USER.ui_working_dir= QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25
 #USER.user_remote_dir = QCD_Pt-20to30_MuEnrichedPt5_antiEM_Tune4C_13TeV_pythia8
 #
 #[QCD_Pt-30to50_MuEnrichedPt5_antiEM_Tune4C_13TeV_pythia8]
-#CMSSW.datasetpath  = /QCD_Pt-30to50_MuEnrichedPt5_Tune4C_13TeV_pythia8/Fall13dr-tsg_PU20bx25_POSTLS162_V2-v2/GEN-SIM-RAW
+#CMSSW.datasetpath  = /QCD_Pt-30to50_MuEnrichedPt5_Tune4C_13TeV_pythia8/Fall13dr-tsg_PU20bx25_POSTLS162_V2-v1/GEN-SIM-RAW
 #CMSSW.pset =  hlt_filter.py
 #USER.user_remote_dir = QCD_Pt-30to50_MuEnrichedPt5_antiEM_Tune4C_13TeV_pythia8
 
 #[QCD_Pt-50to80_MuEnrichedPt5_antiEM_Tune4C_13TeV_pythia8]
-#CMSSW.datasetpath  = /QCD_Pt-50to80_MuEnrichedPt5_Tune4C_13TeV_pythia8/Fall13dr-tsg_PU20bx25_POSTLS162_V2-v2/GEN-SIM-RAW
+#CMSSW.datasetpath  = /QCD_Pt-50to80_MuEnrichedPt5_Tune4C_13TeV_pythia8/Fall13dr-tsg_PU20bx25_POSTLS162_V2-v1/GEN-SIM-RAW
 #CMSSW.pset =  hlt_filter.py
 #USER.user_remote_dir = QCD_Pt-50to80_MuEnrichedPt5_antiEM_Tune4C_13TeV_pythia8
 #
