--- a/test/multicrab_Filt.cfg
+++ b/test/multicrab_Filt.cfg
@@ -7,87 +7,108 @@ CMSSW.number_of_jobs        = 100
 CMSSW.total_number_of_events = 40000
 CMSSW.pset =  myfilter_openHLT.py
 CMSSW.dbs_url=phys03
-USER.publish_data_name = openHLT_Filt_triggerStudies_v720pre8_v4
+USER.publish_data_name = openHLT_Filt_v721patch2
 
 #
 #[QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU20bx25_Filt]
-#CMSSW.datasetpath  = /QCD_Pt-80to120_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v3_QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU20bx25-5ebb4e4c49cada655e6ce787af5722fc/USER
+#CMSSW.datasetpath  = /QCD_Pt-80to120_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_v2_QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU20bx25_v2-93a5b170b5696cc26fad1362faca18c2/USER
 #CMSSW.pycfg_params = QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.user_remote_dir = QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.ui_working_dir= QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #
 #[QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU20bx25_Filt]
-#CMSSW.datasetpath  = /QCD_Pt-120to170_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v3_QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU20bx25-5ebb4e4c49cada655e6ce787af5722fc/USER
+#CMSSW.datasetpath  = /QCD_Pt-120to170_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_v2_QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU20bx25_v2-93a5b170b5696cc26fad1362faca18c2/USER
 #CMSSW.pycfg_params = QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.user_remote_dir = QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.ui_working_dir= QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #
 #[QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU20bx25_Filt]
-#CMSSW.datasetpath  = /QCD_Pt-170to300_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v3_QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU20bx25-5ebb4e4c49cada655e6ce787af5722fc/USER
+#CMSSW.datasetpath  = /QCD_Pt-170to300_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_v2_QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU20bx25_v2-93a5b170b5696cc26fad1362faca18c2/USER
 #CMSSW.pycfg_params = QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.user_remote_dir = QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.ui_working_dir= QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #
 #[QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU20bx25_Filt]
-#CMSSW.datasetpath  = /QCD_Pt-300to470_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v3_QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU20bx25-5ebb4e4c49cada655e6ce787af5722fc/USER
+#CMSSW.datasetpath  = /QCD_Pt-300to470_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_v2_QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU20bx25_v2-93a5b170b5696cc26fad1362faca18c2/USER
 #CMSSW.pycfg_params = QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.user_remote_dir = QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.ui_working_dir= QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #
 #[QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU20bx25_Filt]
-#CMSSW.datasetpath  = /QCD_Pt-470to600_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v3_QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU20bx25-5ebb4e4c49cada655e6ce787af5722fc/USER
+#CMSSW.datasetpath  = /QCD_Pt-470to600_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_v2_QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU20bx25_v2-93a5b170b5696cc26fad1362faca18c2/USER
 #CMSSW.pycfg_params = QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.user_remote_dir = QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.ui_working_dir= QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #
 #[QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU20bx25_Filt]
-#CMSSW.datasetpath  = /QCD_Pt-600to800_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v3_QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU20bx25-5ebb4e4c49cada655e6ce787af5722fc/USER
+#CMSSW.datasetpath  = /QCD_Pt-600to800_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_v2_QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU20bx25_v2-93a5b170b5696cc26fad1362faca18c2/USER
 #CMSSW.pycfg_params = QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.user_remote_dir = QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.ui_working_dir= QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #
 #[QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU20bx25_Filt]
-#CMSSW.datasetpath  = /QCD_Pt-800to1000_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v3_QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU20bx25-5ebb4e4c49cada655e6ce787af5722fc/USER
+#CMSSW.datasetpath  = /QCD_Pt-800to1000_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_v2_QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU20bx25_v2-93a5b170b5696cc26fad1362faca18c2/USER
 #CMSSW.pycfg_params = QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.user_remote_dir = QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.ui_working_dir= QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU20bx25_Filt
 
+#[QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25_Filt_v1]
+#CMSSW.datasetpath  = /QCD_Pt-80to120_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_v1_QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25_v1-e80a4af942d7771fcf7bcc49c1b27e2e/USER
+#USER.user_remote_dir = QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25_Filt
+#
+#[QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25_Filt_v1]
+#CMSSW.datasetpath  = /QCD_Pt-120to170_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_v1_QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25_v1-e80a4af942d7771fcf7bcc49c1b27e2e/USER
+#USER.user_remote_dir = QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25_Filt
+#
+#[QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25_Filt_v1]
+#CMSSW.datasetpath  = /QCD_Pt-170to300_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_v1_QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25_v1-e80a4af942d7771fcf7bcc49c1b27e2e/USER
+#USER.user_remote_dir = QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25_Filt
+#
+#[QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25_Filt_v1]
+#CMSSW.datasetpath  = /QCD_Pt-300to470_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_v1_QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25_v1-e80a4af942d7771fcf7bcc49c1b27e2e/USER
+#USER.user_remote_dir = QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25_Filt
+#
+#[QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25_Filt_v1]
+#CMSSW.datasetpath  = /QCD_Pt-470to600_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_v1_QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25_v1-e80a4af942d7771fcf7bcc49c1b27e2e/USER
+#USER.user_remote_dir = QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25_Filt
+#
+#[QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25_Filt_v1]
+#CMSSW.datasetpath  = /QCD_Pt-600to800_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_v1_QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25_v1-e80a4af942d7771fcf7bcc49c1b27e2e/USER
+#USER.user_remote_dir = QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25_Filt
+#
+#[QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25_Filt_v1]
+#CMSSW.datasetpath  = /QCD_Pt-800to1000_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_v1_QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25_v1-e80a4af942d7771fcf7bcc49c1b27e2e/USER
+#USER.user_remote_dir = QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25_Filt
+
 
 [QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25_Filt]
-CMSSW.datasetpath  = /QCD_Pt-80to120_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v3_QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25-5ebb4e4c49cada655e6ce787af5722fc/USER
+CMSSW.datasetpath  = /QCD_Pt-80to120_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25-bc7cdb5a0b72bf486b13683f5cd1de81/USER
 USER.user_remote_dir = QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25_Filt
-USER.ui_working_dir= QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25_Filt
 
 [QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25_Filt]
-CMSSW.datasetpath  = /QCD_Pt-120to170_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v3_QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25-5ebb4e4c49cada655e6ce787af5722fc/USER
+CMSSW.datasetpath  = /QCD_Pt-120to170_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25-bc7cdb5a0b72bf486b13683f5cd1de81/USER
 USER.user_remote_dir = QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25_Filt
-USER.ui_working_dir= QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25_Filt
 
 [QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25_Filt]
-CMSSW.datasetpath  = /QCD_Pt-170to300_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v3_QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25-5ebb4e4c49cada655e6ce787af5722fc/USER
+CMSSW.datasetpath  = /QCD_Pt-170to300_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25-bc7cdb5a0b72bf486b13683f5cd1de81/USER
 USER.user_remote_dir = QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25_Filt
-USER.ui_working_dir= QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25_Filt
 
 [QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25_Filt]
-CMSSW.datasetpath  = /QCD_Pt-300to470_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v3_QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25-5ebb4e4c49cada655e6ce787af5722fc/USER
+CMSSW.datasetpath  = /QCD_Pt-300to470_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25-bc7cdb5a0b72bf486b13683f5cd1de81/USER
 USER.user_remote_dir = QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25_Filt
-USER.ui_working_dir= QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25_Filt
 
 [QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25_Filt]
-CMSSW.datasetpath  = /QCD_Pt-470to600_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v3_QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25-5ebb4e4c49cada655e6ce787af5722fc/USER
+CMSSW.datasetpath  = /QCD_Pt-470to600_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25-bc7cdb5a0b72bf486b13683f5cd1de81/USER
 USER.user_remote_dir = QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25_Filt
-USER.ui_working_dir= QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25_Filt
 
 [QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25_Filt]
-CMSSW.datasetpath  = /QCD_Pt-600to800_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v3_QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25-5ebb4e4c49cada655e6ce787af5722fc/USER
+CMSSW.datasetpath  = /QCD_Pt-600to800_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25-bc7cdb5a0b72bf486b13683f5cd1de81/USER
 USER.user_remote_dir = QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25_Filt
-USER.ui_working_dir= QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25_Filt
 
 [QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25_Filt]
-CMSSW.datasetpath  = /QCD_Pt-800to1000_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v3_QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25-5ebb4e4c49cada655e6ce787af5722fc/USER
+CMSSW.datasetpath  = /QCD_Pt-800to1000_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v721patch2_QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25-bc7cdb5a0b72bf486b13683f5cd1de81/USER
 USER.user_remote_dir = QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25_Filt
-USER.ui_working_dir= QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25_Filt
-
+#
 #[QCD_Pt-1000to1400_Tune4C_13TeV_pythia8_PU40bx25_Filt]
 #CMSSW.datasetpath  = /QCD_Pt-1000to1400_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_triggerStudies_allAK8_Trk1B_v4_QCD_Pt-1000to1400_Tune4C_13TeV_pythia8_PU40bx25-e4e9d67fd6fec8d75007b737d0a64751/USER
 #CMSSW.pycfg_params = QCD_Pt-1000to1400_Tune4C_13TeV_pythia8_PU40bx25_Filt
